# EMRV

./: DOWNLOAD_AND_UPLOAD_GUIDE.md  FILE_DOWNLOAD_LIST.md  QUICK_DOWNLOAD_GUIDE.md  README.md  pyproject.toml  setup.cfg  validator.py
.github/: weekly-agent.md  weekly-agent.yml
.github/workflows/: ci.yml  daily_auto_commit.yml  deploy.yml  publish-pypi.README.md  publish-pypi.yml  weekly-maintenance.yml
emrvalidator-github/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  SETUP_GUIDE.md  START_HERE.md  pyproject.toml
emrvalidator-github/.github/workflows/: ci.yml  publish.yml
emrvalidator-github/docs/: COMPARISON.md  QUICKSTART.md
emrvalidator-github/emrvalidator/: __init__.py  profiler.py  reporters.py  rules.py  validator.py
emrvalidator-github/emrvalidator/source_systems/: __init__.py  allscripts.py  athenahealth.py  cerner.py  common.py  epic.py  meditech.py
emrvalidator-github/examples/: basic_usage.py
emrvalidator-github/tests/: __init__.py  test_profiler.py  test_validator.py
emrvalidator.egg-info/: PKG-INFO  requires.txt  top_level.txt
utils/: daily_patch.py
