[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emrvalidator"
version = "1.0.0"
description = "A modern, healthcare-focused data quality and validation library - cleaner and faster than Great Expectations"
readme = "README.md"
authors = [
    {name = "Rohan Desai", email = "rohan.acme@gmail.com"},
    {name = "Vaishnavi Gadve", email = "vaishnavigadve143@gmail.com"}
]
maintainers = [
    {name = "Rohan Desai", email = "rohan.acme@gmail.com"},
    {name = "Vaishnavi Gadve", email = "vaishnavigadve143@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = [
    "healthcare",
    "EMR",
    "EHR",
    "data-quality",
    "data-validation",
    "medical-records",
    "healthcare-analytics",
    "data-profiling",
    "great-expectations",
    "ICD",
    "FHIR"
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
]

[project.optional-dependencies]
excel = [
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=1.0",
    "isort>=5.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/rohandesai007/EMRV"
Documentation = "https://github.com/rohandesai007/EMRV#readme"
Repository = "https://github.com/rohandesai007/EMRV"
"Bug Tracker" = "https://github.com/rohandesai007/EMRV/issues"
Changelog = "https://github.com/rohandesai007/EMRV/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["emrvalidator"]

[tool.setuptools.package-data]
emrvalidator = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=emrvalidator --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
