[metadata]
name = emrvalidator
version = 1.0.2
description = A Data Validation Tool for Healthcare Data
author = Rohan Desai
author_email = rohan.acme@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    pandas

[options.packages.find]
where = emrvalidator-github